--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://raw.githubusercontent.com/e-momo/wan-nya/main/%E8%BB%BD%E4%BA%95%E6%B2%A2.jpg);
   background-size: cover;
-  color: white;
+  color: blue;
   text-align: center;
 }
 
@@ -31,11 +31,7 @@ a {
   letter-spacing: 5px;
 }
 
-.top-wrapper p {
-  opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 40px;
-}
+
 
 .btn-wrapper {
   text-align: center;
